# mos_6502

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/consts/msg/: en_us.rs
src/lib/: cpu.rs  error.rs  lib.rs  memory.rs  sealed.rs  traits.rs  utils.rs
src/lib/consts/msg/: en_us.rs
src/lib/cpu/: clock_cycles.rs  mode.rs  mode2.rs  opcode.rs  register_id.rs  stack.rs  status.rs  unit_tests.rs  vector_table.rs
src/lib/cpu/opcode/: u8_opcode_ext.rs
src/lib/cpu/register/: a.rs  x.rs  y.rs
src/lib/cpu/status/: flag.rs  unit_tests.rs
src/lib/cpu/status/unit_tests/: b.rs  c.rs  d.rs  i.rs  n.rs  v.rs  z.rs
src/lib/cpu/unit_tests/: a.rs  execute.rs  new.rs  x.rs  y.rs
src/lib/error/: execution.rs
src/lib/memory/: address.rs  unit_tests.rs  zero_page_address.rs
src/lib/memory/unit_tests/: index.rs  index_mut.rs
src/lib/traits/: i_address.rs  i_register.rs  i_sealed.rs
src/lib/utils/: catch_unwind_silent.rs
test/: Cargo.toml  README.md
