[package]
authors = ["Brad Gibson <b2b@humanenginuity.com>"]
categories = []
description = "<describe crate here>"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "mos_6502"
readme = "README.md"
repository = "https://github.com/u007d/mos_6502"
version = "0.1.0"

[lib]
name = "mos_6502_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "mos_6502"
path = "src/main.rs"

[dependencies]
dbg_hex = "0.1.1"
once_cell = "1.12.0"
thiserror = "1.0.31"

[dev-dependencies]
assert2 = "0.3.6"

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
